# GP-chat_on_GCP

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  bucket.yaml  deploy.bat  ip_config.json  main.py  main_runner.py  pyproject.toml  requirements.txt  sample_of_env.env  sample_of_firebase.json  sample_of_index.html  sample_of_ip_config.json  server.py
gp_chat/: config.py  config.yaml  execution_engine.py  firestore_utils.py  prompts.yaml  session_state_manager.py  sidebar.py  utils.py
